test/corpus/macros.txt
===============================================================================
macro usage
===============================================================================

?MY_MACRO

---

(source_file (expression (macro_application)))

===============================================================================
macro application
===============================================================================

?MY_MACRO(2)
?MY_MACRO(2, [1])
?MY_MACRO(2, [1], ?MY_MACRO_EXTRA)

---

(source_file (expression (macro_application (expression (term (integer))))) (expression (macro_application (expression (term (integer))) (expression (term (list (expression (term (integer)))))))) (expression (macro_application (expression (term (integer))) (expression (term (list (expression (term (integer)))))) (expression (macro_application)))))
