test/corpus/term_record.txt
================================================================================
empty
================================================================================

#r{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (record
      (atom
        (unquoted_atom)))))

================================================================================
record access
================================================================================

A#r.a

--------------------------------------------------------------------------------

(source_file
  (expression
    (variable))
  (ERROR
    (atom
      (unquoted_atom))
    (unquoted_atom)))

================================================================================
with one key and value
================================================================================

#r{ hello = world }

--------------------------------------------------------------------------------

(source_file
  (expression
    (record
      (atom
        (unquoted_atom))
      (record_field
        (atom
          (unquoted_atom))
        (expression
          (atom
            (unquoted_atom)))))))

================================================================================
with many keys and values
================================================================================

#r{ hello = world
  , goodbye = moe
}

--------------------------------------------------------------------------------

(source_file
  (expression
    (record
      (atom
        (unquoted_atom))
      (record_field
        (atom
          (unquoted_atom))
        (expression
          (atom
            (unquoted_atom))))
      (record_field
        (atom
          (unquoted_atom))
        (expression
          (atom
            (unquoted_atom)))))))

================================================================================
updates
================================================================================

M#r{ 1 = V }
(f())#r{ k = V }

--------------------------------------------------------------------------------

(source_file
  (expression
    (variable))
  (expression
    (record
      (atom
        (unquoted_atom))
      (record_field
        (integer)
        (expression
          (variable)))))
  (expression
    (function_call
      (computed_function_name
        (atom
          (unquoted_atom)))))
  (expression
    (record
      (atom
        (unquoted_atom))
      (record_field
        (atom
          (unquoted_atom))
        (expression
          (variable))))))

================================================================================
nested record updates
================================================================================

N2#nrec2.nrec1#nrec1.nrec0#nrec0{name = "nested0a"}

--------------------------------------------------------------------------------

(source_file
  (expression
    (variable))
  (ERROR
    (atom
      (unquoted_atom))
    (unquoted_atom)
    (unquoted_atom)
    (unquoted_atom))
  (expression
    (record
      (atom
        (unquoted_atom))
      (record_field
        (atom
          (unquoted_atom))
        (expression
          (string))))))
